syntax = "proto3";

package onight.zjfae.afront.gens.v2;

//Generated By BrewRobot:Wed Jan 31 15:10:06 CST 2018

message PBIFE_fund_recharge{
	///ife/fund/recharge.html

	string asynchronous = 1; //,是否异步,String,不校验,是,

	string serialNo = 2; //,流水号,String,不校验,是,


}

message Ret_PBIFE_fund_recharge{
	///ife/fund/recharge.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_fund_recharge data=3;


}

message REQ_PBIFE_fund_recharge{
	///ife/fund/recharge.html

	string amount = 1; //,金额,String,不校验,否,

	string password = 2; //,交易密码,String,不校验,否,

	string repeatCommitCheckCode = 3; //,重复校验码,String,不校验,否,

	string payChannelNo = 4; //,渠道,String,不校验,否,

	string checkCode = 5; //,验证码,String,不校验,是,

	string checkCodeSerialNo = 6; //,验证码序号,String,不校验,是,

	string version = 7; //,版本号,String,不校验,是,


}